5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1679_1880.log
== TEST (2019-05-02 12:42:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
if ((x<1)or(x>12)):
	print ("numero de mes invalido")
elif (m==1):
	print("janeiro")
elif (m==2):
	print("fevereiro")
elif (m==3):
	print("marco")
elif (m==4):
	print("abril")
elif (m==5):
	print("maio")
elif (m==6):
	print("junho")
elif (m==7):
	print("julho")
elif (m==8):
	print("agosto")
elif (m==9):
	print("setembro")
elif (m==10):
	print("outubro")
elif (m==11):
	print("novembro")
elif (m==12):
	print("dezembro")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    elif (m==1):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 12:43:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
if ((x<1)or(x>12)):
	print ("numero de mes invalido")
elif (x==1):
	print("janeiro")
elif (x==2):
	print("fevereiro")
elif (x==3):
	print("marco")
elif (x==4):
	print("abril")
elif (x==5):
	print("maio")
elif (x==6):
	print("junho")
elif (x==7):
	print("julho")
elif (x==8):
	print("agosto")
elif (x==9):
	print("setembro")
elif (x==10):
	print("outubro")
elif (x==11):
	print("novembro")
elif (x==12):
	print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 12:43:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("numero: "))
if ((x<1)or(x>12)):
	print ("numero de mes invalido")
elif (x==1):
	print("janeiro")
elif (x==2):
	print("fevereiro")
elif (x==3):
	print("marco")
elif (x==4):
	print("abril")
elif (x==5):
	print("maio")
elif (x==6):
	print("junho")
elif (x==7):
	print("julho")
elif (x==8):
	print("agosto")
elif (x==9):
	print("setembro")
elif (x==10):
	print("outubro")
elif (x==11):
	print("novembro")
elif (x==12):
	print("dezembro")
-- EXECUTION TIME:
0.202407
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
